fix spacing

--- a/src/sass/pages/Home/Hero/_hero.scss
+++ b/src/sass/pages/Home/Hero/_hero.scss
@@ -1,19 +1,17 @@
 @use "../../../abstracts/mixins" as mx;
 
-section.hero {
-  padding-top: 8rem;
-}
-
 div.container-hero {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 1rem;
+  height: calc(100vh - var(--space-200));
 
   @include mx.breakpoint(large) {
     flex-direction: row-reverse;
     justify-content: space-around;
     padding: 0 clamp(2rem, -26.12rem + 37.5vw, 7.63rem);
+    padding-top: var(--space-200);
   }
 
   div.hero-container-image {
