--- a/src/sass/pages/Home/Web-site/_web-site.scss
+++ b/src/sass/pages/Home/Web-site/_web-site.scss
@@ -1,7 +1,7 @@
 @use "../../../abstracts/mixins" as mx;
 
 section.web-sites {
-  margin-top: 8rem;
+  margin-top: var(--space-400);
   div.web-sites-container {
     padding: var(--space-sides);
   }
@@ -11,7 +11,7 @@ div.web-sites-card-container {
   @include mx.breakpoint(medium) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: var(--gap-100);
   }
 
   @include mx.breakpoint(large) {
@@ -26,7 +26,7 @@ div.web-site {
     0 8px 10px -6px rgb(0 0 0 / 0.1);
   border: 1px solid var(--color-fifth);
   padding: 2.5rem 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: var(--gap-100);
 
   div.web-site-points {
     display: flex;
@@ -62,6 +62,6 @@ div.web-site {
   div.web-site-link-container {
     display: flex;
     justify-content: center;
-    margin-top: 3rem;
+    margin-top: calc(var(--gap-100) * 2);
   }
 }
